<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="DB10_Alias" Id="{125f7c14-bc07-4185-8080-6bf9d7d4c446}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
		

	b_IOSimulatie : BOOL := TRUE;
	// ingangen Noodstop
	ix_E_stopNC : BOOL;
	ix_E_stopNO : BOOL; 
	
	// ingangen fotocel
	ix_lengteFC : BOOL;
	ix_hamsterGripperDetectieFC : BOOL;
	
	ix_reedCuttingtoolCilinderOpen : BOOL;
	ix_reedCuttingtoolCilinderGesloten : BOOL;
	ix_reedGripperCilinder1 : BOOL;
	ix_reedGripperCilinder2 : BOOL;
	
	// start/ stop uitgangen extruder&cutting tool
	qx_relaisExtruderStart : BOOL;
	qx_relaisExtruderStop: BOOL;
	qx_relaisCuttingtoolActiveer : BOOL;
	qx_relaisCuttingtoolDeactiveer : BOOL;
	
	// uitgangen ventielaansturing
	qx_ventielEen : BOOL; 
	qx_ventielTwee : BOOL; 
	
	//uitgangen gereserveerd voor KUKA/Engel communicatie
	// E stop
	// bitlevel comm's
	qx_kukaCommEstop : BOOL; 	// E_stop
	qx_kukaComm2 : BOOL; 		// startcommando
	ix_kukaComm3 : BOOL; 		// persencompleet
	ix_kukaComm4 : BOOL; 		// alarm
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>