<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FC10_Alias" Id="{c71a4093-7dc7-4b43-b866-8579637f7b4b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION FC10_Alias : BOOL
VAR_INPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT DB10_Alias.b_IOSimulatie THEN
		
	// ingangen Noodstop
	DB10_Alias.ix_E_stopNC := DIDO.Ingang15;
	DB10_Alias.ix_startKnop := DIDO.Ingang8;
	DB10_Alias.ix_stopKnop := DIDO.Ingang7; 
	
	// ingangen fotocel
	DB10_Alias.ix_lengteFC := NOT DIDO.Ingang5;
	//DB10_Alias.ix_hamsterGripperDetectieFC := NOT DIDO.Ingang6;
	

	//DB10_Alias.ix_reedCuttingtoolCilinderOpen := DIDO.Ingang13;
	//DB10_Alias.ix_reedCuttingtoolCilinderGesloten := DIDO.Ingang14;
	//DB10_Alias.ix_reedGripperCilinder1 := BOOL;
	//DB10_Alias.ix_reedGripperCilinder2 := BOOL;
	
	// uitgangen - status uit DB10_Alias
	DIDO.Uitgang9 := DB10_Alias.qx_relaisExtruderStart;
	DIDO.Uitgang10 := DB10_Alias.qx_relaisExtruderStop;
	DIDO.Uitgang11 := DB10_Alias.qx_relaisCuttingtoolActiveer;
	DIDO.Uitgang12 := DB10_Alias.qx_relaisCuttingtoolDeactiveer;
	
	// uitgangen ventielaansturing
	DIDO.Uitgang3 := DB10_Alias.qx_ventielEen;
	//DIDO.UitgangX := DB10_Alias.qx_ventielTwee; 
	
	// uitgangen gereserveerd voor KUKA/Engel communicatie
	DIDO.Uitgang7 := DB10_Alias.qx_kukaCommEstop; 	// E_stop
	DIDO.Uitgang8 := DB10_Alias.qx_kukaCommStart; 	// startcommando
	//DB10_Alias.ix_kukaGereed := DIDO.Ingang9; 		// persencompleet
	//DB10_Alias.ix_kukaAlarmIN := DIDO.Ingang10; 	// alarm

END_IF
]]></ST>
    </Implementation>
    <LineIds Name="FC10_Alias">
      <LineId Id="158" Count="4" />
      <LineId Id="190" Count="0" />
      <LineId Id="163" Count="4" />
      <LineId Id="198" Count="0" />
      <LineId Id="168" Count="21" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>